--- a/WG.ipynb
+++ b/WG.ipynb
@@ -6450,10 +6450,8 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1010,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1045,
+   "metadata": {},
    "outputs": [],
    "source": [
     "lift_table = [[0, 0, 0, 0, 0, 0, 0]]\n",
@@ -6464,27 +6462,30 @@
     "    cur_positive = lift_df['real_answer'][ int((i - 10) * lift_df.shape[0]/100 ) : int(i * lift_df.shape[0]/100)].sum()\n",
     "    positive += cur_positive\n",
     "    rv_sum += random_variant\n",
-    "    lift_table.append([i, cur_positive, positive, random_variant, rv_sum, round(cur_positive/2463, 3), round(random_variant/2463, 2)])\n",
-    "lift_table = pd.DataFrame(lift_table, columns = ['percent', 'prediction_answer', 'prediction_sum', 'random_answer',\n",
-    "                                                 'random_sum', 'pred_percent', 'random_percent'])"
+    "    lift_table.append([i, cur_positive, positive, random_variant, rv_sum, round(cur_positive/2463, 3),\n",
+    "                       round(random_variant/2463, 2)])\n",
+    "lift_table = pd.DataFrame(lift_table, columns = ['percent', 'positive_answer', 'positive_sum', 'random_answer',\n",
+    "                                                 'random_sum', 'pred_%', 'random_%'])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1011,
-   "metadata": {
-    "collapsed": true
-   },
+   "execution_count": 1046,
+   "metadata": {},
    "outputs": [],
    "source": [
-    "lift_table['sum_pred_percent'] = lift_table['pred_percent'].cumsum()*100\n",
-    "lift_table['sum_random_percent'] = lift_table['random_percent'].cumsum()*100"
+    "lift_table['pred_sum_%']= lift_table['pred_%'].cumsum()*100\n",
+    "lift_table['random_sum_%'] = lift_table['random_%'].cumsum()*100\n",
+    "lift_table['positive%_in10%'] = lift_table['positive_answer'] / (y_test.shape[0]/10)\n",
+    "lift_table['LIFT'] = lift_table['positive%_in10%'] / (y_test.sum()/y_test.shape[0])"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 1012,
-   "metadata": {},
+   "execution_count": 1047,
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "data": {
@@ -6508,14 +6509,16 @@
        "    <tr style=\"text-align: right;\">\n",
        "      <th></th>\n",
        "      <th>percent</th>\n",
-       "      <th>prediction_answer</th>\n",
-       "      <th>prediction_sum</th>\n",
+       "      <th>positive_answer</th>\n",
+       "      <th>positive_sum</th>\n",
        "      <th>random_answer</th>\n",
        "      <th>random_sum</th>\n",
-       "      <th>pred_percent</th>\n",
-       "      <th>random_percent</th>\n",
-       "      <th>sum_pred_percent</th>\n",
-       "      <th>sum_random_percent</th>\n",
+       "      <th>pred_%</th>\n",
+       "      <th>random_%</th>\n",
+       "      <th>pred_sum_%</th>\n",
+       "      <th>random_sum_%</th>\n",
+       "      <th>positive%_in10%</th>\n",
+       "      <th>LIFT</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
@@ -6530,6 +6533,8 @@
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
        "      <td>0.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>1</th>\n",
@@ -6542,6 +6547,8 @@
        "      <td>0.1</td>\n",
        "      <td>63.8</td>\n",
        "      <td>10.0</td>\n",
+       "      <td>0.367891</td>\n",
+       "      <td>6.382460</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>2</th>\n",
@@ -6554,6 +6561,8 @@
        "      <td>0.1</td>\n",
        "      <td>85.2</td>\n",
        "      <td>20.0</td>\n",
+       "      <td>0.123333</td>\n",
+       "      <td>2.139667</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>3</th>\n",
@@ -6566,6 +6575,8 @@
        "      <td>0.1</td>\n",
        "      <td>96.3</td>\n",
        "      <td>30.0</td>\n",
+       "      <td>0.063890</td>\n",
+       "      <td>1.108404</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>4</th>\n",
@@ -6578,6 +6589,8 @@
        "      <td>0.1</td>\n",
        "      <td>99.4</td>\n",
        "      <td>40.0</td>\n",
+       "      <td>0.017786</td>\n",
+       "      <td>0.308567</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>5</th>\n",
@@ -6590,6 +6603,8 @@
        "      <td>0.1</td>\n",
        "      <td>99.9</td>\n",
        "      <td>50.0</td>\n",
+       "      <td>0.002808</td>\n",
+       "      <td>0.048721</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>6</th>\n",
@@ -6602,6 +6617,8 @@
        "      <td>0.1</td>\n",
        "      <td>99.9</td>\n",
        "      <td>60.0</td>\n",
+       "      <td>0.000234</td>\n",
+       "      <td>0.004060</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>7</th>\n",
@@ -6614,6 +6631,8 @@
        "      <td>0.1</td>\n",
        "      <td>99.9</td>\n",
        "      <td>70.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>8</th>\n",
@@ -6626,6 +6645,8 @@
        "      <td>0.1</td>\n",
        "      <td>100.0</td>\n",
        "      <td>80.0</td>\n",
+       "      <td>0.000468</td>\n",
+       "      <td>0.008120</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>9</th>\n",
@@ -6638,6 +6659,8 @@
        "      <td>0.1</td>\n",
        "      <td>100.0</td>\n",
        "      <td>90.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>10</th>\n",
@@ -6650,46 +6673,72 @@
        "      <td>0.1</td>\n",
        "      <td>100.0</td>\n",
        "      <td>100.0</td>\n",
+       "      <td>0.000000</td>\n",
+       "      <td>0.000000</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
        "</div>"
       ],
       "text/plain": [
-       "    percent  prediction_answer  prediction_sum  random_answer  random_sum  \\\n",
-       "0         0                  0               0            0.0         0.0   \n",
-       "1        10               1572            1572          246.3       246.3   \n",
-       "2        20                527            2099          246.3       492.6   \n",
-       "3        30                273            2372          246.3       738.9   \n",
-       "4        40                 76            2448          246.3       985.2   \n",
-       "5        50                 12            2460          246.3      1231.5   \n",
-       "6        60                  1            2461          246.3      1477.8   \n",
-       "7        70                  0            2461          246.3      1724.1   \n",
-       "8        80                  2            2463          246.3      1970.4   \n",
-       "9        90                  0            2463          246.3      2216.7   \n",
-       "10      100                  0            2463          246.3      2463.0   \n",
+       "    percent  positive_answer  positive_sum  random_answer  random_sum  pred_%  \\\n",
+       "0         0                0             0            0.0         0.0   0.000   \n",
+       "1        10             1572          1572          246.3       246.3   0.638   \n",
+       "2        20              527          2099          246.3       492.6   0.214   \n",
+       "3        30              273          2372          246.3       738.9   0.111   \n",
+       "4        40               76          2448          246.3       985.2   0.031   \n",
+       "5        50               12          2460          246.3      1231.5   0.005   \n",
+       "6        60                1          2461          246.3      1477.8   0.000   \n",
+       "7        70                0          2461          246.3      1724.1   0.000   \n",
+       "8        80                2          2463          246.3      1970.4   0.001   \n",
+       "9        90                0          2463          246.3      2216.7   0.000   \n",
+       "10      100                0          2463          246.3      2463.0   0.000   \n",
        "\n",
-       "    pred_percent  random_percent  sum_pred_percent  sum_random_percent  \n",
-       "0          0.000             0.0               0.0                 0.0  \n",
-       "1          0.638             0.1              63.8                10.0  \n",
-       "2          0.214             0.1              85.2                20.0  \n",
-       "3          0.111             0.1              96.3                30.0  \n",
-       "4          0.031             0.1              99.4                40.0  \n",
-       "5          0.005             0.1              99.9                50.0  \n",
-       "6          0.000             0.1              99.9                60.0  \n",
-       "7          0.000             0.1              99.9                70.0  \n",
-       "8          0.001             0.1             100.0                80.0  \n",
-       "9          0.000             0.1             100.0                90.0  \n",
-       "10         0.000             0.1             100.0               100.0  "
+       "    random_%  pred_sum_%  random_sum_%  positive%_in10%      LIFT  \n",
+       "0        0.0         0.0           0.0         0.000000  0.000000  \n",
+       "1        0.1        63.8          10.0         0.367891  6.382460  \n",
+       "2        0.1        85.2          20.0         0.123333  2.139667  \n",
+       "3        0.1        96.3          30.0         0.063890  1.108404  \n",
+       "4        0.1        99.4          40.0         0.017786  0.308567  \n",
+       "5        0.1        99.9          50.0         0.002808  0.048721  \n",
+       "6        0.1        99.9          60.0         0.000234  0.004060  \n",
+       "7        0.1        99.9          70.0         0.000000  0.000000  \n",
+       "8        0.1       100.0          80.0         0.000468  0.008120  \n",
+       "9        0.1       100.0          90.0         0.000000  0.000000  \n",
+       "10       0.1       100.0         100.0         0.000000  0.000000  "
       ]
      },
-     "execution_count": 1012,
+     "execution_count": 1047,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "lift_table"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### Lift"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 1048,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "LIFT: 6.38246041413\n"
+     ]
+    }
+   ],
+   "source": [
+    "print('LIFT:', lift_table['LIFT'][1])"
    ]
   },
   {
